@@ -13,7 +13,7 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/20 orbeckst, VOD555, lilyminium
+??/??/20 orbeckst, VOD555, lilyminium, yuxuanzhuang
 
   * 1.0.1
 
@@ -24,6 +24,7 @@ Fixes
     density=True; the keyword was available since 0.19.0 but with incorrect
     semantics and not documented and did not produce correct results (Issue
     #2811, PR #2812)
+  * pickle correct frames of DCD, TRR, and XTC (#2878)
 
 
 06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
